--- a/public/admin/newsletter.html
+++ b/public/admin/newsletter.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>News Letter Data - Avara Solutions Admin</title>
+  <title>News Letter Data - CMS One Admin</title>
   <link href="css/styles.css" rel="stylesheet" />
   <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
     crossorigin="anonymous" />
@@ -71,7 +71,7 @@
       <footer class="py-4 bg-light mt-auto">
         <div class="container-fluid">
           <div class="d-flex align-items-center justify-content-between small">
-            <div class="text-muted">Copyright &copy; CMS One 2020</div>
+            <div class="text-muted">Copyright &copy; Powered by: CMS One 2020</div>
             <div>
               <a href="#">Privacy Policy</a>
               &middot;
