--- a/public/admin/password.html
+++ b/public/admin/password.html
@@ -54,7 +54,7 @@
       <footer class="py-4 bg-light mt-auto">
         <div class="container-fluid">
           <div class="d-flex align-items-center justify-content-between small">
-            <div class="text-muted">Copyright &copy; CMS One 2020</div>
+            <div class="text-muted">Copyright &copy; Powered by: CMS One 2020</div>
             <div>
               <a href="#">Privacy Policy</a>
               &middot;
