--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Content Items - Avara Solutions Admin</title>
+  <title>Content Items - CMS One Admin</title>
   <link href="/admin/css/styles.css" rel="stylesheet" />
   <link href="/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
   <script src="/vendor/font-awesome/5.13.0/all.min.js"></script>
@@ -241,7 +241,7 @@
       <footer class="py-4 bg-light mt-auto">
         <div class="container-fluid">
           <div class="d-flex align-items-center justify-content-between small">
-            <div class="text-muted">Copyright &copy; CMS One 2020</div>
+            <div class="text-muted">Copyright &copy; Powered by: CMS One 2020</div>
             <div>
               <a href="#">Privacy Policy</a>
               &middot;
