--- a/public/admin/tables.html
+++ b/public/admin/tables.html
@@ -13,7 +13,7 @@
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">Avara Solutions</a>
+            <a class="navbar-brand" href="index.html">CMS One</a>
             <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
@@ -617,7 +617,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; CMS One 2020</div>
+                            <div class="text-muted">Copyright &copy; Powered by: CMS One 2020</div>
                             <div>
                                 <a href="#">Privacy Policy</a>
                                 &middot;
