--- a/public/admin/configure.html
+++ b/public/admin/configure.html
@@ -33,12 +33,12 @@
                     </div>
                     <div class="form-group">
                       <label class="small mb-1" for="inputSiteURL">Frontend Site URL * (with domain)</label>
-                      <input class="form-control py-4" id="inputSiteURL" type="text" placeholder="cmsone.com" />
+                      <input class="form-control py-4" id="inputSiteURL" type="text" placeholder="cmsone.site" />
                     </div>
                     <div class="form-group">
                       <label class="small mb-1" for="inputAPIUrl">API URL *</label>
                       <input class="form-control py-4" id="inputAPIUrl" type="text" aria-describedby="emailHelp"
-                        placeholder="api.cmsone.com" />
+                        placeholder="api.cmsone.site" />
                     </div>
                     <div class="form-group">
                       <label class="small mb-1" for="inputAuthKey">Auth Key *</label>
