--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,14 @@
   <meta name="description" content="CMS One, Light weight CMS for your website. Create and Manage your content easily">
   <meta name="keywords" content="CMS,CMS One">
   <meta name="author" content="Siddhesh Kulkarni">
-  <link href="http://www.cmsone.com/" rel="canonical">
+  <link href="http://www.cmsone.site/" rel="canonical">
   <meta name="robots" content="index, follow">
 </head>
 
 <body class="toast-parent" style="position: relative; min-height: 200px;">
   <h1>Welcome to CMS One</h1>
   <!-- Add following scripts to your html page to enable tracking and analysis -->
+  <script src="/vendor/jquery/3.5.1/jquery-3.5.1.min.js"></script>
   <script src="/js/common/polyfill.min.js"></script>
   <script src="/js/common/ajax.js"></script>
   <script src="/js/common/browser.js"></script>
