Add minification code.

--- a/public/admin/request.html
+++ b/public/admin/request.html
@@ -13,6 +13,7 @@
 
 <body>
   <p id="main">We are processing your request please wait.</p>
+  <script src="/js/environment.js"></script>
   <script src="/js/common/ajax.js"></script>
   <script src="/js/common/app.js"></script>
   
