--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,15 @@
   <!-- Add following scripts to your html page to enable tracking and analysis -->
   <script src="/vendor/jquery/3.5.1/jquery-3.5.1.min.js"></script>
   <script src="/js/common/polyfill.min.js"></script>
-  <script src="/js/common/ajax.js"></script>
+  
+  <script src="/js/environment.js"></script>
+  
+  <!-- <script src="/js/common/ajax.js"></script>
   <script src="/js/common/browser.js"></script>
   <script src="/js/common/app.js"></script>
   <script src="/js/common/event-api.js"></script>
-  <script src="/js/common/app-bootstrapper.js"></script>
+  <script src="/js/common/app-bootstrapper.js"></script> -->
+  <script src="/js/final/bundle.min.js"></script>
 </body>
 
 </html>
