--- a/public/admin/menusnpages.html
+++ b/public/admin/menusnpages.html
@@ -127,26 +127,24 @@
   </div>
   <script src="/vendor/jquery/3.5.1/jquery-3.5.1.min.js"></script>
   <script src="/vendor/bootstrap/4.5.0/bootstrap.bundle.min.js"></script>
-  <script src="/admin/js/scripts.js"></script>
   <script src="/vendor/bootstrap-treeview/bootstrap-treeview.min.js"></script>
   <script src="/vendor/datatables/jquery.dataTables.min.js"></script>
   <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
-  <script src="assets/demo/datatables-demo.js"></script>
 
-  <script src="/js/common/ajax.js"></script>
+  <script src="/js/environment.js"></script>
+
+  <!-- <script src="/js/common/ajax.js"></script>
   <script src="/js/common/browser.js"></script>
   <script src="/js/common/app.js"></script>
   <script src="/admin/js/app.js"></script>
   <script src="/admin/js/admin-main.js"></script>
-
   <script src="/admin/js/bootstrap-forms.js"></script>
   <script src="/packages/bootstrap-modal/js/bootstrap-modals.js"></script>
-  
   <script src="/admin/js/pagecontent-adv-modal.js"></script>
   <script src="/admin/js/content-item-modal.js"></script>
-
   <script src="/admin/js/menus-folders.js"></script>
-  <script src="/admin/js/pages-items.js"></script>
+  <script src="/admin/js/pages-items.js"></script> -->
+  <script src="/admin/final/bundle.min.js"></script>
 </body>
 
 </html>
