--- a/public/admin/newsletter.html
+++ b/public/admin/newsletter.html
@@ -85,16 +85,21 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
   <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
-  <script src="assets/demo/datatables-demo.js"></script>
 
+  <script src="/js/environment.js"></script>
+
+  <!-- <script src="/admin/js/scripts.js"></script>
+  <script src="/admin/assets/demo/chart-area-demo.js"></script>
+  <script src="/admin/assets/demo/chart-bar-demo.js"></script>
+  <script src="/admin/assets/demo/datatables-demo.js"></script>
   <script src="/js/common/ajax.js"></script>
   <script src="/js/common/browser.js"></script>
   <script src="/js/common/app.js"></script>
   <script src="/admin/js/app.js"></script>
-  <script src="/admin/js/admin-main.js"></script>
+  <script src="/admin/js/admin-main.js"></script> -->
+  <script src="/admin/final/bundle.min.js"></script>
 </body>
 
 </html>
