--- a/public/admin/register.html
+++ b/public/admin/register.html
@@ -99,6 +99,7 @@
   <script src="/vendor/jquery/3.5.1/jquery-3.5.1.min.js"></script>
   <script src="/vendor/bootstrap/4.5.0/bootstrap.bundle.min.js"></script>
 
+  <script src="/js/environment.js"></script>
   <script src="/admin/js/scripts.js"></script>
 
   <script src="/js/common/ajax.js"></script>
