--- a/public/admin/reviews.html
+++ b/public/admin/reviews.html
@@ -82,18 +82,21 @@
   </div>
   <script src="/vendor/jquery/3.5.1/jquery-3.5.1.min.js"></script>
   <script src="/vendor/bootstrap/4.5.0/bootstrap.bundle.min.js"></script>
-
-  <script src="/admin/js/scripts.js"></script>
-
   <script src="/vendor/datatables/jquery.dataTables.min.js"></script>
   <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
-  <script src="/admin/assets/demo/datatables-demo.js"></script>
 
+  <script src="/js/environment.js"></script>
+
+  <!-- <script src="/admin/js/scripts.js"></script>
+  <script src="/admin/assets/demo/chart-area-demo.js"></script>
+  <script src="/admin/assets/demo/chart-bar-demo.js"></script>
+  <script src="/admin/assets/demo/datatables-demo.js"></script>
   <script src="/js/common/ajax.js"></script>
   <script src="/js/common/browser.js"></script>
   <script src="/js/common/app.js"></script>
   <script src="/admin/js/app.js"></script>
-  <script src="/admin/js/admin-main.js"></script>
+  <script src="/admin/js/admin-main.js"></script> -->
+  <script src="/admin/final/bundle.min.js"></script>
 </body>
 
 </html>
