--- a/public/admin/configure.html
+++ b/public/admin/configure.html
@@ -102,7 +102,7 @@
       <footer class="py-4 bg-light mt-auto">
         <div class="container-fluid">
           <div class="d-flex align-items-center justify-content-between small">
-            <div class="text-muted">Copyright &copy; Powered by: CMS One 2020</div>
+            <div class="text-muted">Copyright &copy; Powered by: <a href="http://www.cmsone.site/">CMS One 2020</a></div>
             <div>
               <a href="#">Privacy Policy</a>
               &middot;
